Fixed ability select layout bug. Fixed init of player at restart

--- a/src/style/general.scss
+++ b/src/style/general.scss
@@ -129,6 +129,10 @@ a {
   text-decoration: none;
 }
 
+hr {
+  border-top: 2px #9eb890 dashed;
+}
+
 .red {
   color: #d30000;
 }
